src/objects/GP_Saldo_por_vencimiento__c.object
<CustomObject>
    <description>Saldos de puntos según vencimiento - Gestor de Puntos</description>
    <fields>
        <fullName>Apellido_del_cliente__c</fullName>
        <formula>Socio__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_del_padre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido del padre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular__c</fullName>
        <formula>Socio__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_del_padre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celular del padre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <formula>Socio__r.Cuenta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_as__c</fullName>
        <formula>Vencimiento__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejecutar__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ejecutar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_del_cliente__c</fullName>
        <formula>Socio__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_del_padre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email del padre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EsPadre__c</fullName>
        <formula>ISBLANK( Socio__r.Socio_padre__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EsPadre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDpadre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Cuenta__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDpadre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Padre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del Padre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_cliente__c</fullName>
        <formula>Socio__r.Cuenta__r.vlocity_cmt__PrimaryContactId__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PtosPadre__c</fullName>
        <formula>Socio__r.Socio_padre__r.Saldo_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PtosPadre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntos__c</fullName>
        <label>Puntos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <defaultValue>DATEVALUE($Label.Run_Date)</defaultValue>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Socio__c</fullName>
        <label>Socio</label>
        <referenceTo>GP_Socio__c</referenceTo>
        <relationshipLabel>GP Saldos por vencimiento</relationshipLabel>
        <relationshipName>GP_Saldos_por_vencimiento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vencimiento__c</fullName>
        <label>Vencimiento</label>
        <type>Date</type>
    </fields>
    <label>GP Saldo por vencimiento</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Saldo por vencimiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Saldos por vencimiento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>